// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the <GifGrid /> component should render 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    bike
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Testing the <GifGrid /> component should render items when the useFetchGifs is called 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    bike
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="12345"
      key="12345"
      title="Imagen 12345"
      url="https://localhost/index/img12345.jpg"
    />
    <GifGridItem
      id="99999"
      key="99999"
      title="Imagen 99999"
      url="https://localhost/index/img99999.jpg"
    />
  </div>
</Fragment>
`;
